Criaçao do endoint de busca por genero
Criado endpoint e funçao na controller, documentaçao do endpoint e ajuste para retornar o genero
