# src/controllers/MoviesController.js
@@ -10,6 +10,16 @@ class MoviesController {
 
         return response.json(await moviesService.findAllMaxPopularity(limitOf))
     }
+
+    async findByGenre(request, response) {
+
+        const { limitOf } = request.query
+        const { genre } = request.params
+
+        const moviesService = new MoviesService()
+
+        return response.json(await moviesService.findByGenre(genre, limitOf))
+    }
 }
 
 export default MoviesController
